Fix fullscreen mode on iOS ok.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -720,17 +720,6 @@ main {
   flex-direction: column;
 }
 
-@media (orientation: landscape) {
-  .game-container-fullscreen {
-    width: 100%;
-    height: 100%;
-    min-width: 100vw;
-    min-height: 100vh;
-    max-width: 100vw;
-    max-height: 100vh;
-  }
-}
-
 /* Ensure the body doesn't scroll when in fullscreen */
 body.fullscreen-mode {
   overflow: hidden;
@@ -782,4 +771,53 @@ body.opera-ios-fullscreen .game-container-fullscreen {
 /* Hide body overflow when game is fullscreen */
 body:has(.game-container-fullscreen) {
   overflow: hidden !important;
+}
+
+/* Styles for when using native fullscreen API */
+.game-container:fullscreen {
+  width: 100vw !important;
+  height: 100vh !important;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+.game-container:-webkit-full-screen {
+  width: 100vw !important;
+  height: 100vh !important;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+.game-container:-moz-full-screen {
+  width: 100vw !important;
+  height: 100vh !important;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+.game-container:-ms-fullscreen {
+  width: 100vw !important;
+  height: 100vh !important;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Hide CategoryGrid when in fullscreen mode */
+body:has(.game-container:fullscreen) #categoryGrid,
+body:has(.game-container:-webkit-full-screen) #categoryGrid,
+body:has(.game-container:-moz-full-screen) #categoryGrid,
+body:has(.game-container:-ms-fullscreen) #categoryGrid {
+  display: none !important;
+}
+
+/* Hide NavItem when in fullscreen mode */
+body:has(.game-container:fullscreen) .nav-item,
+body:has(.game-container:-webkit-full-screen) .nav-item,
+body:has(.game-container:-moz-full-screen) .nav-item,
+body:has(.game-container:-ms-fullscreen) .nav-item {
+  display: none !important;
 }
